--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
-          <li><a class="nav-link" href="https://avincahcrb.github.io/kelompokS5/">Back To Team Project</a></li>
+          <li><a class="nav-link" href="avincahcrb.github.io/kelompokS5/">Back To Team Project</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
