--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -189,188 +189,267 @@
       <h3>Fishing</h3>
     </div>
     <div class="icon-box">
-      <i class="fas fa-basketball-ball" style="color: #e80368;"></i>
-      <h3>Basketball</h3>
+      <i class="fas fa-bed" style="color: #e80368;"></i>
+      <h3>Sleep</h3>
     </div>
     <div class="icon-box">
-      <i class="fas fa-guitar" style="color: #e361ff;"></i>
-      <h3>Playing Guitar</h3>
+      <i class="fas fa-book" style="color: #e361ff;"></i>
+      <h3>Reading Comic</h3>
     </div>
   </div>
-</div><!-- End Hobby Section -->
+</div><!-- End Hobby -->
 
-<!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio">
-  <div class="container">
 
-    <div class="section-title">
-      <h2>Portfolio</h2>
-      <p>My works</p>
-    </div>
 
-    <div class="row portfolio-container" data-aos="fade-up">
+<!-- ======= Education ======= -->
+<div class="education container">
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>App 1</h4>
-          <p>App</p>
-          <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+  <div class="section-title">
+    <h2>Educational Background</h2>
+  </div>
+
+  <div class="education-slider swiper" data-aos="fade-up" data-aos-delay="100">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide">
+        <div class="education-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            I attended SDIT As-sunnah in Cirebon for my primary education. I developed a strong foundation in basic subjects and participated in extracurricular activities.               
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/education/sd.jpg" class="education-img" alt="">
+          <h3>SDIT As-sunnah Cirebon</h3>
+          <h4>2012 - 2016</h4>
         </div>
-      </div>
+      </div><!-- End education item -->
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Web 3</h4>
-          <p>Web</p>
-          <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      <div class="swiper-slide">
+        <div class="education-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            I continued my education at SMP Negeri 1 Cirebon for three years. I focused on mathematics and science and was actively involved in the schools debate and pramuka teams.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/education/smp.jpg" class="education-img" alt="">
+          <h3>SMPN 7 Cirebon</h3>
+          <h4>2016 - 2019</h4>
         </div>
-      </div>
+      </div><!-- End education item -->
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>App 2</h4>
-          <p>App</p>
-          <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      <div class="swiper-slide">
+        <div class="education-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            My high school years were at SMK Negeri 2 Cirebon, where I specialized in Cooking. I learned culinary arts, kitchen management, and completed an internship at a local restaurant.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/education/smk.jpg" class="education-img" alt="">
+          <h3>SMKN 2 Cirebon</h3>
+          <h4>2019 - 2022</h4>
         </div>
-      </div>
+      </div><!-- End education item -->
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Card 2</h4>
-          <p>Card</p>
-          <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      <div class="swiper-slide">
+        <div class="education-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            I pursued higher education at IKMI Cirebon and earned a degree in Computer Science. My coursework included software development and UI/UX design.
+          </p>
+          <img src="assets/img/education/ikmi.jpg" class="education-img" alt="">
+          <h3>STMIK Ikmi Cirebon</h3>
+          <h4>2022 - Now</h4>
         </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Web 2</h4>
-          <p>Web</p>
-          <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>App 3</h4>
-          <p>App</p>
-          <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Card 1</h4>
-          <p>Card</p>
-          <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Card 3</h4>
-          <p>Card</p>
-          <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <h4>Web 1</h4>
-          <p>Web</p>
-          <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 1"><i class="bx bx-plus"></i></a>
-          <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-        </div>
-      </div>
+      </div><!-- End education item -->
 
     </div>
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <div class="owl-carousel educations-carousel">
 
   </div>
-</section><!-- End Portfolio Section -->
 
-<!-- ======= Contact Section ======= -->
-<section id="contact" class="contact">
-  <div class="container">
+</div><!-- End education -->
 
-    <div class="section-title">
-      <h2>Contact</h2>
-      <p>Contact Me</p>
+
     </div>
+    <div class="swiper-pagination"></div>
+  </div>
 
-    <div class="row" data-aos="fade-in">
+  <div class="owl-carousel educations-carousel">
 
-      <div class="col-lg-5 d-flex align-items-stretch">
-        <div class="info">
-          <div class="address">
-            <i class="bi bi-geo-alt"></i>
-            <h4>Location:</h4>
-            <p>A108 Adam Street, New York, NY 535022</p>
-          </div>
+  </div>
 
-          <div class="email">
-            <i class="bi bi-envelope"></i>
-            <h4>Email:</h4>
-            <p>info@example.com</p>
-          </div>
+</div><!-- End education -->
 
-          <div class="phone">
-            <i class="bi bi-phone"></i>
-            <h4>Call:</h4>
-            <p>+1 5589 55488 55</p>
-          </div>
-
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9669361072055!2d-74.0060159845934!3d40.712775179331195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a316a64e9e3%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sid!4v1592437968637!5m2!1sen!2sid" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
         </div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+      <div class="owl-carousel educations-carousel">
 
       </div>
 
-      <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label for="name">Your Name</label>
-              <input type="text" name="name" class="form-control" id="name" required>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="name">Your Email</label>
-              <input type="email" class="form-control" name="email" id="email" required>
+    </div><!-- End educations  -->
+
+  </section><!-- End About Section -->
+
+  <!-- ======= Portfolio Section ======= -->
+  <section id="portfolio" class="portfolio">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Portfolio</h2>
+        <p>My Works</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center">
+          <ul id="portfolio-flters">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-app">App</li>
+            <li data-filter=".filter-web">Web</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>App 1</h4>
+              <p>App</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="name">Subject</label>
-            <input type="text" class="form-control" name="subject" id="subject" required>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web 1</h4>
+              <p>Web</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="name">Message</label>
-            <textarea class="form-control" name="message" rows="10" required></textarea>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>App 2</h4>
+              <p>App</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-details-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="my-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit">Send Message</button></div>
-        </form>
+        </div>
+
       </div>
 
     </div>
+  </section><!-- End Portfolio Section -->
 
-  </div>
-</section><!-- End Contact Section -->
+  <!-- ======= Contact Section ======= -->
+  <section id="contact" class="contact">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Contact</h2>
+        <p>Contact Me</p>
+      </div>
+
+      <div class="row mt-2">
+
+        <div class="col-md-6 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-map"></i>
+            <h3>My Address</h3>
+            <p>Cirebon City, Indonesia</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-share-alt"></i>
+            <h3>Social Profiles</h3>
+            <div class="social-links">
+              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-envelope"></i>
+            <h3>Email Me</h3>
+            <p>Abdulloh@gmail.com</p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-phone-call"></i>
+            <h3>Call Me</h3>
+            <p>+62 852 765 1234</p>
+          </div>
+        </div>
+      </div>
+
+      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+        <div class="row">
+          <div class="col-md-6 form-group">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+          </div>
+          <div class="col-md-6 form-group mt-3 mt-md-0">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+          </div>
+        </div>
+        <div class="form-group mt-3">
+          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+        </div>
+        <div class="form-group mt-3">
+          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+        </div>
+        <div class="my-3">
+          <div class="loading">Loading</div>
+          <div class="error-message"></div>
+          <div class="sent-message">Your message has been sent. Thank you!</div>
+        </div>
+        <div class="text-center"><button type="submit">Send Message</button></div>
+      </form>
+
+    </div>
+  </section><!-- End Contact Section -->
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
